# never-forget

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
backend/: README.md  __init__.py  bootstrap.py  config.py  environment.py  observability.py  pyproject.toml  run_batch.py  run_server.py  run_single.py
backend/adapters/: pydantic_ai_agent.py
backend/application/: inputs.py  services.py  web_services.py
backend/domain/: __init__.py  models.py  ports.py
backend/entrypoints/: batch_cli.py  common.py  http_api.py  single_cli.py
backend/infrastructure/: __init__.py  audio_storage.py  repositories.py  storage.py  transcription.py
backend/src/never_forget/: __init__.py  bootstrap.py
backend/src/never_forget/adapters/: __init__.py
backend/src/never_forget/application/: __init__.py  health_check.py
backend/src/never_forget/domain/: __init__.py
backend/src/never_forget/entrypoints/: __init__.py
backend/src/never_forget/entrypoints/http/: api.py
backend/src/never_forget/infrastructure/: __init__.py  settings.py
backend/tests/: test_health_api.py  test_http_api.py
docs/: 00_docs_structure.md  03_concepts.md  05_user_journeys.md  0x_other_features
docs/backend/: 00_tech_stack.md  01_architectural_rules.md  90_temporary_next_steps.md
frontend/: package-lock.json  package.json  vite.config.ts
webapp/: README.md  components.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
webapp/src/: main.tsx
(+81 files in other folders)
