[project]
name = "never-forget-backend"
version = "0.1.0"
description = "Backend scaffold for the Never Forget application."
readme = "README.md"
authors = [
    { name = "Ricu", email = "856534+Ricu@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/never_forget"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "N", "C4", "SIM", "RET", "RUF", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
